Fix Bug, Guest Lecture info tab is not aligned

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -156,6 +156,7 @@ nav ul {
 
 .main {
   display: flex;
+  padding-bottom: 10px;
 }
 
 .mobile {
@@ -201,6 +202,7 @@ nav ul {
 
 .info_text {
   margin: 16px;
+  width: 65%;
 }
 
 .info_text h4,
@@ -209,6 +211,11 @@ nav ul {
 }
 
 @media only screen and (max-width: 470px) {
+
+  .grey {
+    background-color: rgb(255, 255, 255);
+  }
+
   .main_body {
     display: none;
   }
@@ -294,6 +301,7 @@ nav ul {
 
   .learning {
     background-color: rgb(255, 255, 255);
+    padding: 16px;
     margin: 0;
     padding-bottom: 32px;
   }
@@ -303,6 +311,7 @@ nav ul {
   }
 
   .container_course {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
